fix dark mode display issues

--- a/src/style.css
+++ b/src/style.css
@@ -42,6 +42,19 @@ html, body {
   text-align: left;
 }
 
+table {
+  background: #ffffff;
+  color: #111827 ;
+}
+
+table td,
+table th {
+  /*background: #ffffff !important;
+  color: #111827 !important; */
+  color: #111827;
+}
+
+
 a {
   font-weight: 500;
   color: #646cff;
